refactor: update Tailwind CSS configuration and styles for compatibility with v4

--- a/src/widgets/navigation/style.css
+++ b/src/widgets/navigation/style.css
@@ -1,7 +1,7 @@
-ul li a {
+/* ul li a {
   @apply py-2 px-4 rounded flex items-center gap-2;
 }
 
 ul li a.active {
   @apply bg-gray-100 font-medium;
-}
+} */
